--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 body {
-    background-color: aqua;
+  background-color: aqua;
 }
 p {
-    color: rgb(141, 184, 23);
+  color: rgb(141, 184, 23);
+  /*новый коммент*/
 }
 h2 {
-    font-size: 50px;
+  font-size: 50px;
 }
